WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96691
Table row direction should be determined by the Table's direction
https://bugs.webkit.org/show_bug.cgi?id=96691
Summary
Table row direction should be determined by the Table's direction
Julien Chaffraix
Reported
2012-09-13 14:00:51 PDT
Created
attachment 163958
[details]
Test case Per CSS 2.1, 17.5 Visual layout of table contents: Point 3: "The first column box may be either on the left or on the right, depending on the value of the ’direction’ property of the table." Point 5: "The [cell] rectangle must be as far to the left as possible [...] and the cell must be to the right of all cells in the same row that are earlier in the source document. [...] (This constraint holds if the ’direction’ property of the table is ’ltr’; if the ’direction’ is ’rtl’, interchange "left" and "right" in the previous two sentences.)" All other browsers consistently interpret the "row propagation" direction to be the table's 'direction'. WebKit has an old bug where the row-group direction is used instead. Note: Some of the test cases from
bug 87900
were based on the assumption that our behavior was fine and would need to be updated. It's probably better to wait until
bug 79272
is solved to update them though.
Attachments
Test case
(1.08 KB, text/html)
2012-09-13 14:00 PDT
,
Julien Chaffraix
no flags
Details
Concept patch: Fixes the bug but is missing the proper rebaselines
(7.13 KB, patch)
2012-09-13 14:05 PDT
,
Julien Chaffraix
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Julien Chaffraix
Comment 1
2012-09-13 14:05:08 PDT
Created
attachment 163960
[details]
Concept patch: Fixes the bug but is missing the proper rebaselines
Ahmad Saleem
Comment 2
2022-08-30 10:19:08 PDT
I am able to reproduce this bug in Safari Technology Preview 152 using attached "test case" and the lime color test cases does not show up on the left side while purple on right. Just wanted to share updated testing results. Thanks!
Radar WebKit Bug Importer
Comment 3
2022-08-30 11:59:42 PDT
<
rdar://problem/99343532
>
Brandon
Comment 4
2022-08-31 17:15:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3892
Ahmad Saleem
Comment 5
2023-04-24 05:32:02 PDT
Blink Commit -
https://chromium.googlesource.com/chromium/src.git/+/6e84e7643da78ca93373487c5e8dfec261933fbb
fantasai
Comment 6
2024-09-12 11:50:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33558
EWS
Comment 7
2024-09-18 15:20:18 PDT
Committed
283875@main
(86dc22fbb4b7): <
https://commits.webkit.org/283875@main
> Reviewed commits have been landed. Closing PR #33558 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug