Table row direction should be determined by the Table's direction https://bugs.webkit.org/show_bug.cgi?id=96691

Reviewed by NOBODY (OOPS!).

This patch is an adaption based on the bugzilla patch by Julien Chaffraix.

We should use the table's style to determine the rendering direction
how the table's rows should flow.

* LayoutTests/imported/w3c/web-platform-tests/css/css-tables/direction-on-table-parts-row-direction.html: Added.
* LayoutTests/platform/mac/imported/w3c/web-platform-tests/css/css-tables/direction-on-table-parts-row-direction-expected.txt: Added.
* Source/WebCore/rendering/RenderTable.cpp:
(WebCore::RenderTable::calcBorderStart const):
(WebCore::RenderTable::calcBorderEnd const):
* Source/WebCore/rendering/RenderTableSection.cpp:
(WebCore::RenderTableSection::logicalRectForWritingModeAndDirection const):
(WebCore::RenderTableSection::setLogicalPositionForCell const):
(WebCore::RenderTableSection::firstRowCellAdjoiningTableStart const): Deleted.
(WebCore::RenderTableSection::firstRowCellAdjoiningTableEnd const): Deleted.
* Source/WebCore/rendering/RenderTableSection.h: